    - Limited animation speed of fish, puffer, and biter refugiums (987)
    - Tech tree changes: (991)
      - Moved Garden Processing and Farming 1 techs from Red Science to Green Science
      - Reduced the tier of Algae farm 2's ingredients
      - Made Biters require Purple Science
    - Updated for Factorio 2.0 (994)
    - Added circuit connectors to all machines (1114)
---------------------------------------------------------------------------------------------------
Version: 0.7.27
Date: 21.02.2024
  Changes:
    - Renamed triggers table from angelsmods.triggers to angelsmods.trigger to match other Angel's mods (969)
---------------------------------------------------------------------------------------------------
Version: 0.7.26
Date: 04.01.2024
  Changes:
    - Adjust paper volume (964):
      - Halve the output of the paper recipes
      - Halve the amount of paper required for Phenolic boards
  Bugfixes:
    - Fixed compatibility issue with AAI Industry and Bob's Assembling Machines (960)
---------------------------------------------------------------------------------------------------
Version: 0.7.25
Date: 22.12.2023
  Changes:
    - Added support for alien artifacts outside of bob enemies
    - Compatibility with Bob's changes (911)
    - Recipes that consume Gardens will now only buffer enough ingredients for 1 craft (918)
    - Adjusted techs and added a new recipe (Sodium hypochlorite decomposition) to make Paper 2 viable when it is unlocked (922)
    - Rebalanced paper and pulp recipes to make each tier feel like a significant upgrade (923)
    - Made wood production available earlier (932)
      - Recipe changes for Tree seed generators, Arboretum, and Composter
      - Tech tree changes
    - Added custom error message for when trying to insert invalid items into butchery, composter, or hatchery (933)
    - Reworked recipes for Bob's circuit boards (936)
      - Removed recipe paper to wooden boards